2004-09-15 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCicode.c (piCode): applied patch from Raphael Neider,
	* src/pic16/device.c (pic16_assignConfigWordValues): wrong
	configuration values no more rejected by compiler, they are assigned
	to configuration registers with a warning message instead,
	* src/pic16/glue.c (pic16_emitConfigRegs): added +1 at top-limit of
	the for-loop so last conf register is emitted too,
	* (_pic16_initPaths): link library libsdcc.lib by default,
	* (_hasNativeMulFor): modified test for multiplication according to
	Raphael Neider's remarks. Integer multiplication is also done with
	support functions,
	* device/include/pic16/pic18fregs.h: corrected type error in while
	testing and including 18f6720 header file

2004-09-14 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.h (pic16_options): removed field use_crt,
	* src/pic16/gen.c (genUnpackBits): added call to pic16_loadFSR0
	until an optimization to handle single bits is added,
	* (pic16_loadFSR0): moved before genUnpackBits,
	* (genAnd): some white lines removed,
	* src/pic16/main.c (_pic16_finaliseOptions): set omit_ivt and clear
	leave_reset flags in pic16_options when using crt modules,

2004-09-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packRegisters): applied fix by Bernhard Held
	  for bugs 898889 & 979599. Also used some safer print instructions.

2004-09-12 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.h (pic16_options_t): added field use_crt,
	crt_name, no_crt,
	* src/pic16/genarith.c (pic16_genPlus): added an assert(0) line to
	catch a probable future bug,
	* src/pic16/gen.c: aopIdx function commented out,
	* (genAssign): commented out old code which used aopIdx,
	* src/pic16/glue.c (pic16glue): removed some legacy fragments of
	code, added if conditionals to take into account the --use-crt
	command line options,
	* src/pic16/main.c (pic16_optionsTable): added new command line
	options, --use-crt= and --no-crt,